<resources>
    <string name="app_name" translatable="false">67Benda</string>

    <string name="lupakatasandi" translatable="false">Lupa kata sandi?</string>
    <string name="login" translatable="false">masuk</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>

    <string name="today" translatable="false">Hari ini</string>

    <string name="yesterday" translatable="false">Kemarin</string>
    <string name="lengkapiform" translatable="false">Mohon lengkapi form</string>
    <string name="cekkoneksi" translatable="false">Mohon cek koneksi anda</string>
    <string name="action_about" translatable="false">Tentang</string>
    <string name="logout" translatable="false">Keluar Akun</string>
    <string name="finance" translatable="false">Keuangan</string>
    <string name="Presence" translatable="false">Presensi</string>
    <string name="logoutmessage" translatable="false">Anda yakin ingin keluar ?</string>
    <string name="title_spp" translatable="false">SPP</string>
    <string name="title_pembayaran" translatable="false">Pembayaran</string>
    <string name="title_activity_finance" translatable="false">Keuangan</string>
    <string name="title_specific" translatable="false">Riwayat</string>
    <string name="title_invoice" translatable="false">Tagihan</string>
    <string name="bln_januari" translatable="false">Januari</string>
    <string name="bln_februari" translatable="false">Februari</string>
    <string name="bln_maret" translatable="false">Maret</string>
    <string name="bln_april" translatable="false">April</string>
    <string name="bln_mei" translatable="false">Mei</string>
    <string name="bln_juni" translatable="false">Juni</string>
    <string name="bln_juli" translatable="false">Juli</string>
    <string name="bln_agustus" translatable="false">Agustus</string>
    <string name="bln_september" translatable="false">September</string>
    <string name="bln_oktober" translatable="false">Oktober</string>
    <string name="bln_november" translatable="false">November</string>
    <string name="bln_desember" translatable="false">Desember</string>
    <string name="lunas" translatable="false">Lunas</string>
    <string name="belumdibayar" translatable="false">Belum dibayar</string>
    <string name="pilihsantri" translatable="false">Pilih Akun Santri</string>
    <string name="status_present" translatable="false">Hadir</string>
    <string name="status_ill" translatable="false">Sakit</string>
    <string name="status_permit" translatable="false">Izin</string>
    <string name="status_weekend" translatable="false">Weekend</string>
    <string name="dopayment" translatable="false">Lakukan Pembayaran</string>
    <string name="total" translatable="false">Total</string>
    <string name="silakancek" translatable="false">Silakan centang SPP yang ingin dibayar</string>
    <string name="setting" translatable="false">Pengaturan</string>
    <string name="tidak" translatable="false">Tidak</string>
    <string name="belumdaftar" translatable="false">Anda belum terdaftar?</string>
    <string name="daftardisini" translatable="false">Daftar disini</string>
    <string name="reg_nama" translatable="false">Nama Lengkap</string>
    <string name="reg_tanggal_lahir" translatable="false">Tanggal Lahir</string>
    <string name="reg_no_telepon" translatable="false">Nomor Telepon</string>
    <string name="lengkapidata" translatable="false">Lengkapi Data Berikut</string>
    <string name="announce" translatable="false">Pengumuman</string>
    <string name="sakit" translatable="false">Sakit</string>
    <string name="izin" translatable="false">Izin</string>
    <string name="title_activity_home_v2" translatable="false">HomeActivityV2</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="menu_home" translatable="false">Halaman Utama</string>
    <string name="menu_gallery" translatable="false">Gallery</string>

    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_tools" translatable="false">Tools</string>
    <string name="menu_share" translatable="false">Share</string>
    <string name="menu_send" translatable="false">Send</string>
    <string name="menu_profil" translatable="false">Profil Pesantren</string>
    <string name="menu_info_pendaftaran" translatable="false">Info Pendaftaran</string>
    <string name="menu_info_wali_santri" translatable="false">Info Wali Santri</string>
    <string name="welcome_msg_add_santri" translatable="false">Kamu belum memiliki satu pun data santri terhubung. Untuk memaksimalkan fungsi app ini, silahkan hubungkan akunmu dengan salah seorang santri terlebih dahulu dengan cara klik tombol Tambahkan Santri di bawah ini.</string>
    <string name="tambahkan_santri" translatable="false">Tambahkan Santri</string>
    <string name="addsantri_text1" translatable="false">Masukkan Nomor Induk Santri</string>
    <string name="addsantri_text2" translatable="false">Nomor Induk Santri</string>
    <string name="ahlanwasahlan" translatable="false">67Benda</string>
    <string name="home_text1" translatable="false">"Kehadiran Hari Ini, "</string>
    <string name="home_text2" translatable="false">Belum ada santri yang ditambahkan</string>
    <string name="home_text3" translatable="false">Tagihan Pembayaran</string>
    <string name="home_text4" translatable="false">Total Tagihan</string>
    <string name="home_text5" translatable="false">Berita dari Pesantren</string>
    <string name="home_text_info_wali_santri" translatable="false">Info Wali Santri</string>
    <string name="menu_presence" translatable="false">Presensi</string>
    <string name="menu_payment" translatable="false">Pembayaran</string>
    <string name="menu_news" translatable="false">Berita dari Pesantren</string>
    <string name="menu_add_santri" translatable="false">Tambah Santri</string>
    <string name="menu_about" translatable="false">Tentang Aplikasi</string>
    <string name="menu_logout" translatable="false">Keluar</string>
    <string name="menu_login" translatable="false">Login Wali Santri</string>
    <string name="home_text6" translatable="false">Masuk</string>
    <string name="loremipsum" translatable="false">\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="loremipsumhalflong" translatable="false">\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="loremipsumlong" translatable="false">\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="home_text7_selengkapnya" translatable="false">Selengkapnya</string>
    <string name="detailnews" translatable="false">Detail Berita</string>


    <string name="pil_presensi_santri" translatable="false">Pilih Presensi Santri</string>
    <string name="choose_santri_1" translatable="false">Belum ada Santri yang ditambahkan</string>
    <string name="choose_santri_2" translatable="false">Kehadiran Hari Ini</string>
    <string name="tentang_app_description" translatable="false">67Benda merupakan aplikasi berbasis Android yang dikembangkan untuk membantu para wali santri memantau aktivitas buah hatinya yang dititipkan di Pesantren Persatuan Islam 67 Benda Tasikmalaya</string>
    <string name="pilih_pembayaran_santri" translatable="false">Pilih Pembayaran Santri</string>
    <string name="riwayat_pembayaran" translatable="false">Riwayat Pembayaran</string>
    <string name="tagihan_pembayaran" translatable="false">Tagihan Pembayaran</string>
    <string name="no_bill" translatable="false">Tidak ada tagihan</string>
    <string name="pembayaran_telah_dilakukan" translatable="false">Pembayaran yang Telah Dilakukan</string>
    <string name="tagihan_pembayaran_per_santri" translatable="false">Tagihan Pembayaran</string>
    <string name="detail_tagihan">Detail Tagihan</string>
    <string name="registrasi">Registrasi</string>
    <string name="next">Lanjut</string>
    <string name="skip">Lewati</string>

    <string name="start">Mulai</string>
    <string name="slide_1_desc">67Benda merupakan aplikasi berbasis Android yang dikembangkan untuk membantu para wali santri memantau aktivitas buah hatinya yang dititipkan di Pesantren Persatuan Islam 67 Benda Tasikmalaya</string>
    <string name="slide_2_desc">Melalui aplikasi 67Benda, wali santri bisa memantau kehadiran santrinya dalam menjalani proses belajar mengajar di pesantren dan langsung mengetahui jika buah hatinya tidak masuk sekolah dikarenakan sakit atau yang lainnya</string>

    <string name="slide_3_desc">Melalui aplikasi 67Benda, wali santri bisa melakukan pembayaran SPP dan bayaran lainnya yang harus dibayarkan serta memantau status pembayarannya</string>
    <string name="slide_4_desc">Melalui aplikasi 67Benda, wali santri bisa mendapatkan pengumuman terbaru dari pesantren dan memantau segala kegiatan dan aktivitas yang diselenggarakan oleh pesantren</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="default_notification_channel_id">com.madrasahdigital.walisantri.ppi67benda.FCM_NOTIFICATION</string>
    <string name="youtube_api_key" translatable="false">AIzaSyDyKc0IeczBzeBr2Gam9AgmEa00Mf4KQp4</string>

    <string-array name="name_example">
        <item>Farhan Ghifari</item>
        <item>Farin Akhsanta</item>
        <item>Fadlan Lazuardi</item>
    </string-array>
    <string-array name="year_example">
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
    </string-array>

</resources>
