<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_presensi"
            android:icon="@drawable/ic_open_book"
            android:title="@string/menu_presence" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_bill"
            android:title="@string/menu_payment" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_folded_newspaper"
            android:title="@string/menu_news" />

        <item
            android:id="@+id/nav_add_santri"
            android:icon="@drawable/ic_add_circle_black_24dp"
            android:title="@string/menu_add_santri" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>

</menu>
