<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".view.activity.presence.ChooseSantriPresenceActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/white"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="@string/pil_presensi_santri"
        app:titleTextColor="@color/black"/>

    <TextView
        android:id="@+id/tvTitleToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_santri_2"
        android:layout_margin="20dp"
        android:textColor="@color/greytextcolor"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvKeteranganTidakAdaSantri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_santri_1"
        android:layout_margin="20dp"
        android:textColor="@color/greytextcolor"
        android:textSize="14sp"
        android:layout_gravity="center_horizontal"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_numbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:scrollbars="vertical" />

</LinearLayout>