<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_full_white_40dp"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="12dp"
        android:layout_centerHorizontal="true"
        android:text="@string/logoutmessage"
        android:textColor="@color/black"
        android:textSize="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:gravity="center_horizontal"
        android:layout_below="@id/tv_question"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_tidak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="5dp"
            android:background="@drawable/btn_silver"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/tidak"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:background="@drawable/btn_red"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/logout"
            android:textColor="@color/white" />

    </LinearLayout>


</RelativeLayout>