<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.activity.HomeActivityV2"
    tools:showIn="@layout/app_bar_home_activity_v2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitleToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/greytextcolor"
                android:text="@string/home_text1"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_presence_today"
                    android:scrollbars="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ProgressBar
                    android:id="@+id/progressBarToday"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:visibility="gone"
                    android:indeterminateDrawable="@drawable/progressbar_color"
                    android:layout_centerInParent="true"/>

                <ImageView
                    android:id="@+id/ivRefreshPresenceToday"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_refresh_green_48dp"
                    android:layout_centerInParent="true"/>

                <TextView
                    android:id="@+id/tvBelumAdaSantri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/home_text2"
                    android:layout_centerHorizontal="true"/>

                <Button
                    android:id="@+id/btnTambahkanSantri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/tvBelumAdaSantri"
                    android:background="@drawable/btn_green"
                    android:text="@string/tambahkan_santri"
                    android:textColor="@color/white"
                    />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/greytextcolor"
                android:text="@string/home_text3"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@drawable/btn_blue">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_text4"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rp 1.500.000"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/greytextcolor"
                android:text="@string/home_text5"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_news"
                android:scrollbars="horizontal"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>